ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thumbnail-cache-ingress
spec:
  tls:
    - secretName: thumbnail-cache-cert
  rules:
    - host: dearrow-thumb.ajay.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thumbnail-cache-service
                port:
                  number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graph-ingress
  namespace: monitoring
spec:
  tls:
    - secretName: graph-cert
  rules:
    - host: graph.dearrow-thumb.ajay.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operator-grafana
                port:
                  number: 80
